--- a/Css-Fundamentos/scss/main.scss
+++ b/Css-Fundamentos/scss/main.scss
@@ -6,3 +6,5 @@
 @import '../ITCSS/Objects/objects';
 @import '../ITCSS/Componets/componets';
 @import '../ITCSS/Utilities/utilities';
+
+// Comando de Compilacion : sass --watch scss/main.scss:css/index.css
