Reinicio del proyecto Fundamentos de Css

--- a/Css-Fundamentos/ITCSS/Componets/_componets.scss
+++ b/Css-Fundamentos/ITCSS/Componets/_componets.scss
@@ -1,1 +1,16 @@
-/*Todavia no e tocado esta parte*/
+// .carousel {
+    /* Estilos del carrusel */
+ // }
+  
+ //  .dropdown-menu {
+    /* Estilos del menú desplegable */
+ // }
+  
+  // Estilos de módulos de interfaz de usuario
+ //  .dialog-box {
+    /* Estilos de la caja de diálogo */
+ // }
+  
+ // .card {
+    /* Estilos de la tarjeta */
+ // }
